--- a/baidu/day02/index.css
+++ b/baidu/day02/index.css
@@ -1,22 +1,47 @@
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 32px;
-    font-style: italic;
     color: aqua;
-    text-align: left;
+    text-align: center;
 }
 h2{
     font-size: 28px;
+    text-indent: 1em;
 }
 h3{
     font-size: 24px;
     font-weight: 400;
     color: aquamarine;
     text-align: left;
+    text-indent: 2em;
 }
 li{
     font-size: 18px;
     text-decoration: underline;
     text-indent: 2em;
     line-height: 18px;
+}
+#container{
+    width: 600px;
+    height: 800px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    background-color: aliceblue;
+}
+#container table{
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 142px;
+    border-collapse: collapse;
+}
+#container table tr td {
+    text-indent: 1em;
+    border: 1px solid #ccc;
+}
+table tr td:nth-child(3){
+    width: 128px;
+} 
+td img{
+    width: 100px;
+    height: 120px;
 }
